# raven

./: .directory  .dockerignore  .gitignore  CHANGELOG  Cargo.toml  Dockerfile  LICENSE  README.md  Raven.opam  bench.sh  build.rs  conventions.md  design.md  dune  dune-project  log.smt  log_auth_lattice.smt  log_copy Frac.frameCompInv axiom.smt  output  output.txt  package-lock.json  resolve.txt  rsm.rav  test.rav  todo.md  tree_delete.rav
.github/workflows/: blank.yml  ci.yml  ocaml_ci.yml
Code Walkthrough/: Raven AST.md  Raven Codebase Walkthrough.md  Raven Lexer.md  Raven Parser.md  Raven Resolve Namespaces.md  Raven Type Checker.md
bench_results/: bench_20250228_072408.csv
formalism/: completeness  formalism.tex
iris_proofs/: _CoqProject
iris_proofs/single_copy/: single_node_inv.v
lib/ast/: .#rewriter.ml  ast.ml  astDef.ml  dune  progUtils.ml  rewriter.ml  stateMonad.mli  symbolTbl.ml  traverser.ml
lib/backend/: callable_checker.bak.ml  callable_checker.ml  checker.bak.ml  checker.ml  dependencies.ml  dune  module_checker.ml  smt.ml  smtLibAST.bak.ml  smtLibAST.ml  smt_solver.ml  smt_solver.new.ml  smt_solver_new.ml  z3_util.ml
lib/config/: config.ml  dune
lib/ext/: README.md  blank_ext.ml.md  dune  ext.ml
lib/frontend/: dune  index_modules.ml  lexer.mll  parser.mly  parser_ext.mly  process_ast.ml  resolve_namespaces.ml  rewriter.ml  rewrites.ml  symbolTbl.ml  terminals.ml  type_checker.ml  typing.ml
lib/frontend/rewrites/: atomicityAnalysis.ml  dune  heapsExplicitTrnsl.ml  masks.ml  rewrites.ml
lib/ppx/: dune  ppx_opaque_monadic.ml
lib/symbexec/: dune  z3test.ml
lib/util/: channel.ml  dune  error.ml  graph.ml  loc.ml  option.ml  print.ml  state.ml
scripts/: bench.sh  bench_ext.sh  count_sections.sh  format.rs  system.rs  tscheck.rs
smt-encodings/: (declare-datatype HeapChunk ((heapNull) .smt2  array-max-encoding.smt2  array-max-encoding2.smt2  array-max-encoding3.smt2  array-max-encoding3_trial.smt2  dutch-flag.smt2  example1.smt2  give-up.smt2  heapchunk_smtlib_encoding_0.smt2  heapchunk_smtlib_encoding_1.smt2  heapchunk_smtlib_encoding_2.smt2  heapchunk_smtlib_encoding_min_fail_eg.smt2  heapchunk_z3_encoding.py  main  minimum working example.smt2  patterns.smt2  quant_chunk.smt2  rec-fns.smt2  resource-algebra-encoding.smt2  single-node.smt2  test-smt.smt2  test.cmi  test.cmo  test.smt2  test.vpr  viper_encoding_arrays.smt2
test/: dutch-flag.rav  existentials_test.rav  existentials_test2.rav  give-up.rav  illustrative  list_predicates.rav  list_predicates2.rav  list_test.rav  one-shot.rav  one-shot_concurrent.rav  one-shot_concurrent_sequentialized.rav  ra_test.rav  resource_algebra.rav  single-node-compact.rav  single-node-test copy.rav  single-node-test.rav  single-node.rav  single-node_imports.rav  single-node_rough.rav  test.rav  test2.rav
test/adt/: list.rav
test/arrays/: array.rav  array.t  array_util.rav  array_utils.rav  array_utils.t  ordered_array.rav  parray.rav  union-find.rav
test/bugs/: assume_false_bug.rav  atomicity_check_ghost_field_bug.rav  bind.rav  bogus_error_msg.rav  clashing_field_parameter_name.rav  co_recursion.rav  crash_on_implicit.rav  data_type_inherit.rav  diamond_modules.rav  faulty_skolems.rav  ghost_state_non-ghost_context.rav  incomplete_witness_computation.rav  inst_mod_frac_field.rav  interface_module_dep.rav  invariant_alloc.rav  ite_preds.rav  map_map.rav  rec_func_contract.rav  return_proc.rav  set_type.rav  unsound-with.rav  witness_comp.rav
test/comparison/: adt_buggy.rav  adt_buggy.t  adt_correct.rav  adt_correct.t  arc.rav  arc.t  arc_atomics.rav  arc_buggy.rav  arc_buggy.t  arc_ra.rav  arc_ra.t  auth_maxnat_excl_ra.rav  barrier.rav  barrier.t  barrier_buggy.rav  barrier_buggy.t  barrier_client.rav  barrier_client.t  bounded_counter.rav  bounded_counter.t  cas_counter.rav  cas_counter.t  cas_counter_client.rav  cas_counter_client.t  dfrac_ra.rav  dune  fork_join.rav  fork_join.t  fork_join_client.rav  fork_join_client.t  inc_dec.rav  inc_dec.t  lclist.rav  lclist.t  lclist_buggy.rav  lclist_buggy.t  lclist_wip.rav  lock_invariant.rav  msc_queue.rav  msc_queue.t  (+21 more)
test/counter/: counter.rav  counter_no_inv.rav  counter_no_inv_rewritten.rav
test/error-credits/: ec_examples.rav
test/ext_error-credits/: amortised_hash.rav  cf_hash.rav  cf_hashmap.rav  dune  ec_dynamic_vec.rav  ec_examples.rav  ec_examples.t  hash.rav
test/ext_list/: list_example_1.rav  list_example_1.t  list_example_2.rav  list_example_2.t  list_trial.rav
test/ext_prophecy/: clairvoyant_coin.rav  clairvoyant_coin.t  coinflip_finalized.rav  lazy_coin.rav  lazy_coin.t  prophecy_trial.rav  prophecy_trial.t  rdcss.rav  rdcss.t
test/iterated-star/: array-max copy.rav  array-max.rav  array-max_old.rav  array-max_working.rav  binary-graph.rav  binary-graph2.rav  binary-search.rav  binary-search.t  dutch-flag.rav  graph_marking_buggy.rav  graph_marking_buggy.t  graph_marking_correct.rav  graph_marking_correct.t  receiver-expr.rav
test/linked-lists/: list.rav  list.t
test/lock/: spin-lock-test.rav  spin-lock.rav  spin-lock_goal.rav
test/lucas-noob-work/: clh_lock.rav  clh_lock.v  clh_lock_clean.rav  clh_lock_clean.v  clh_lock_clean_debug.rav  clh_lock_clean_debug2.rav  clh_lock_tmp.v  daily-work-log.md  lclist-notes.md  lclist.rav
test/rec-preds/: list.rav  list_predicates_wip.rav  tree_delete.rav  tree_delete.t
test/regression/: adt.rav
test/rustbelt/: lifetimes.rav  mutex.md  mutex.rs  place_types.md  place_types.rav  refinement_types.rav  translation.md
test/treiber_stack/: treiber_stack_atomics.rav  treiber_stack_rewritten.rav
tests/: anti-aliasing.rav  frac_ra_fpu.rav  nat_ra_fpu.rav
tests/back-end/: agree_inhale.t  anti-aliasing.rav  anti-aliasing.t  auth_inhale.t  exhale_existential_quant_elim.t  (+7 more)
tmp/: logfile-00.smt2  logfile-05.smt2  logfile-10.smt2  logfile-11.smt2  logfile-12.smt2
tools/ravenfmt/: Cargo.toml  package-lock.json
tools/ravenfmt/queries/: indent.scm
tools/ravenfmt/src/: format.rs  main.rs
treesitter/: Makefile  grammar.js  package-lock.json  package.json
(+342 files in other folders)
