(library
 (name frontend)
 (libraries base ast ext defaultExt AtomicExt)
 (preprocess
  (pps ppx_hash ppx_compare ppx_sexp_conv ppx_custom_printf ppx_let)))

; (library
;   (name rewrites)
;   (libraries base ast frontend)
; )

(ocamllex
 (modules lexer))

(menhir
 (modules parser parser_ext)
 (merge_into parser)
 (flags --explain))
