(library
 (name frontend)
 (libraries base ast ext defaultExt AtomicExt)
 (preprocess
  (pps ppx_hash ppx_compare ppx_sexp_conv ppx_custom_printf ppx_let)))

; (library
;   (name rewrites)
;   (libraries base ast frontend)
; )

(ocamllex
 (modules lexer))

(rule
 (target atomicExt_parser.mly)
 (deps ../ext/atomicExt/atomicExt_parser.mly)
 (action (copy %{deps} %{target})))

(rule
 (target errorCreditsExt_parser.mly)
 (deps ../ext/errorCreditsExt/errorCreditsExt_parser.mly)
 (action (copy %{deps} %{target})))

(menhir
 (modules parser atomicExt_parser errorCreditsExt_parser)
 (merge_into parser)
 (flags --explain))
