(library
 (name frontend)
 (libraries base ast ext defaultExt listExt prophecyExt atomicExt)
 (preprocess
  (pps ppx_hash ppx_compare ppx_sexp_conv ppx_custom_printf ppx_let)))

; (library
;   (name rewrites)
;   (libraries base ast frontend)
; )

(ocamllex
 (modules lexer))

(rule
 (target listExt_parser.mly)
 (deps ../ext/listExt/listExt_parser.mly)
 (action (copy %{deps} %{target})))

(rule
 (target prophecyExt.mly)
 (deps ../ext/prophecyExt/prophecyExt_parser.mly)
 (action (copy %{deps} %{target})))

(rule
 (target atomicExt_parser.mly)
 (deps ../ext/atomicExt/atomicExt_parser.mly)
 (action (copy %{deps} %{target})))

(rule
 (target errorCreditsExt_parser.mly)
 (deps ../ext/errorCreditsExt/errorCreditsExt_parser.mly)
 (action (copy %{deps} %{target})))

(rule
 (target sampleExt_parser.mly)
 (deps ../ext/sampleExt/sampleExt_parser.mly)
 (action (copy %{deps} %{target})))

(menhir
 (modules parser listExt_parser prophecyExt atomicExt_parser errorCreditsExt_parser sampleExt_parser)
 (merge_into parser)
 (flags --explain))
